; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/can/usb/kvaser_usb/extr_kvaser_usb_hydra.c_kvaser_usb_hydra_frame_to_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/can/usb/kvaser_usb/extr_kvaser_usb_hydra.c_kvaser_usb_hydra_frame_to_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvaser_usb_net_priv = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.sk_buff = type { i32 }

@KVASER_USB_HYDRA_CAP_EXT_CMD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.kvaser_usb_net_priv*, %struct.sk_buff*, i32*, i32*, i32)* @kvaser_usb_hydra_frame_to_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @kvaser_usb_hydra_frame_to_cmd(%struct.kvaser_usb_net_priv* %0, %struct.sk_buff* %1, i32* %2, i32* %3, i32 %4) #0 {
  %6 = alloca %struct.kvaser_usb_net_priv*, align 8
  %7 = alloca %struct.sk_buff*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store %struct.kvaser_usb_net_priv* %0, %struct.kvaser_usb_net_priv** %6, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32 %4, i32* %10, align 4
  %12 = load %struct.kvaser_usb_net_priv*, %struct.kvaser_usb_net_priv** %6, align 8
  %13 = getelementptr inbounds %struct.kvaser_usb_net_priv, %struct.kvaser_usb_net_priv* %12, i32 0, i32 0
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @KVASER_USB_HYDRA_CAP_EXT_CMD, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %28

21:                                               ; preds = %5
  %22 = load %struct.kvaser_usb_net_priv*, %struct.kvaser_usb_net_priv** %6, align 8
  %23 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = load i32*, i32** %9, align 8
  %26 = load i32, i32* %10, align 4
  %27 = call i8* @kvaser_usb_hydra_frame_to_cmd_ext(%struct.kvaser_usb_net_priv* %22, %struct.sk_buff* %23, i32* %24, i32* %25, i32 %26)
  store i8* %27, i8** %11, align 8
  br label %35

28:                                               ; preds = %5
  %29 = load %struct.kvaser_usb_net_priv*, %struct.kvaser_usb_net_priv** %6, align 8
  %30 = load %struct.sk_buff*, %struct.sk_buff** %7, align 8
  %31 = load i32*, i32** %8, align 8
  %32 = load i32*, i32** %9, align 8
  %33 = load i32, i32* %10, align 4
  %34 = call i8* @kvaser_usb_hydra_frame_to_cmd_std(%struct.kvaser_usb_net_priv* %29, %struct.sk_buff* %30, i32* %31, i32* %32, i32 %33)
  store i8* %34, i8** %11, align 8
  br label %35

35:                                               ; preds = %28, %21
  %36 = load i8*, i8** %11, align 8
  ret i8* %36
}

declare dso_local i8* @kvaser_usb_hydra_frame_to_cmd_ext(%struct.kvaser_usb_net_priv*, %struct.sk_buff*, i32*, i32*, i32) #1

declare dso_local i8* @kvaser_usb_hydra_frame_to_cmd_std(%struct.kvaser_usb_net_priv*, %struct.sk_buff*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
